# dertown

./: .eslintrc.json  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  ADULT_ACTIVITIES_GUIDE.md  CALENDAR_SYNC_GUIDE.md  CALENDAR_TIMEZONE_SOLUTION.md  CLAUDE.md  CUSTOMIZATION.md  DATA_MODEL_REFACTORING_PLAN.md  DEPLOYMENT_AUTH_CHECKLIST.md  DEVELOPING.md  EMAIL_SETUP.md  KID_ACTIVITY_CALENDAR_EVENTS.md  LICENSE  Makefile  PROJECT_REQUIREMENTS.md  README.md  REFACTORING_RECOMMENDATION.md  STYLEGUIDE.md  TESTING_AUTH.md  TODO.md  UI_COMPONENT_RECOMMENDATIONS.md  astro.config.mjs  build.sh  env.example  eslint.config.js  eslint.config.mjs  extract_dump_data.py  get-pip.py  main.py  netlify.toml  package-lock.json  package.json  pyproject.toml  remote_data_dump.sql  render.yaml  requirements.txt  (+4 more)
.claude/: launch.json
.cursor/: FEATURE.md  ROOT_CAUSE.md  rules.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: db-backup.yml  django-migrations.yml  lint.yml
backups/: db_dump.sql  db_dump_2025_09-02.sql
dertown/: asgi.py  urls.py  wsgi.py
dertown/settings/: base.py  debug.py  dev.py  production.py
dertown/templates/: 500.html  README.md  base.html
docs/: KID_ACTIVITIES_PRD.md  feature-event-scraper.md  mobile-deployment.md
events/: admin.py  apps.py  context_processors.py  forms.py  google_calendar.py  models.py  tests.py  urls.py  utils.py  views.py  wagtail_hooks.py
events/components/: footer.py  (+3 more)
home/: models.py
ingest/: html_utils.py  wagtail_hooks.py
mobile/: .env.example  .gitignore  .npmrc  README.md  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
public/: calendar-v2.js  calendar.js  embla-init.js  fullcalendar-init.js  glider-init.js
reference/: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  .stylelintrc.json  Dockerfile  Procfile  build.sh  dev.sh  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  setup_dev.sh
scrape/: README.md  sources.yaml
scripts/: assign_tags_to_events.py  clean_seed_data.py  data_manager.py  dev_utils.py  generate-theme.ts  models.py  seed_database.py  seed_local_base.py  seed_staged_data.py  test_kebab.js  test_kebab.ts  test_postgres_null_validator.py  transform_and_upload.py  update_local_events.py  validate_theme_colors.ts  validate_timezone.mjs  validation.py
settings/: base.py
src/: env.d.ts
supabase/: config.toml  seed.sql
(+495 files in other folders)
